--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "habit tracker app using nodejs and ejs",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SAYYAD SULTHAN",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
