fixed some bugs

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-DB_URI = 'mongodb+srv://asulthan088:Asulthan088@habit-tracker-cluster.sump3er.mongodb.net/?retryWrites=true&w=majority'
+PORT = 8000
+
+DB_URI = 'mongodb+srv://asulthan088:12345@newcluster.pvhb9aa.mongodb.net/newproject?retryWrites=true&w=majority'
 
 DB_USERNAME = 'asulthan088'
 
 DB_PASSWORD  = 'Asulthan088'
 
-SET PORT = 3000;
